<resources>
  <string name="hello">Hello World, MainActivity!</string>
  <string name="app_name">丫丫玩SDK</string>
  <string name="remeberpassword">记住密码</string>
  <string name="login">登  录</string>
  <string name="user">输入用户</string>
  <string name="password">输入密码</string>
  <string name="main_title">浙江大学移动运维服务平台</string>
  <string name="index">首页</string>
  <string name="commission">绑定手机</string>
  <string name="commission_list">切换帐户</string>
  <string name="commission_signfor_list">待签收列表</string>
  <string name="commission_waitmanage_list">待处理列表</string>
  <string name="hitch_search">修改密码</string>
  <string name="hitch_see">支付宝</string>
  <string name="eixt">充值中心</string>
  <string name="eixt1">攻略秘籍</string>
  <string name="eixt2">精品推荐</string>
  <string name="eixt3">关于丫丫玩</string>
  <string name="happentime">金额:</string>
  <string name="hitchtype">个人中心</string>
  <string name="schooladdress">消息设置</string>
  <string name="buildingname">楼宇名称</string>
  <string name="managerman">处理人</string>
  <string name="hitchstatus">故障状态</string>
  <string name="set_searchcondition">充值中心</string>
  <string name="search">查询</string>
  <string name="reset">退出</string>
  <string name="submit">确定</string>
  <string name="cancel">取消</string>
  <string name="server_ip">183.62.48.226</string>
  <string name="server_port">9996</string>
  <string name="version">1.0</string>
  <string name="client_name">用户名 :</string>
  <string name="tel_name">充值方式 :</string>
  <string name="trouble_number">充值金额:</string>
  <string name="school_name">忘记密码</string>
  <string name="building_name">注册</string>
  <string name="trouble_address">免费获得验证码</string>
  <string name="unit_name">下一步</string>
  <string name="troubletype_name">59秒重新获得验证码</string>
  <string name="troubletype">已绑定</string>
  <string name="troublestatus">未绑定</string>
  <string name="trouble_sign">充值确认</string>
  <string name="sign_accept">登录后修改你的帐号密码</string>
  <string name="sign_ordertime">选择其它帐号登录</string>
  <string name="trouble_manage">立即充值</string>
  <string name="client_infomation">充值信息</string>
  <string name="creatperson_infomation">创建人信息</string>
  <string name="trouble_infomation">故障信息</string>
  <string name="remark_infomation">备注信息</string>
  <string name="person_infomation">人员信息</string>
  <string name="sign_infomation">签收信息</string>
  <string name="backunit_infomation">回单信息</string>
  <string name="sign_department">签收部门</string>
  <string name="sign_people">签收人员</string>
  <string name="sign_telephone">联系电话</string>
  <string name="sign_opinion">签收意见</string>
  <string name="sign_time">签收时间</string>
  <string name="sign_phone">手机号码</string>
  <string name="set_department">设置部门</string>
  <string name="set_people">设置人员</string>
  <string name="set_orderdate">预约日期</string>
  <string name="set_ordertime">订单号</string>
  <string name="set_operatetime">操作时间</string>
  <string name="creatunit_person">亲爱的用户,您正在申请丫丫玩找回密码服务:</string>
  <string name="creatunit_person1">亲爱的用户,您正在申请手机绑定丫丫玩(免费)服务:</string>
  <string name="creatunit_time">请输入您需要的手机号码,并点击"免费获得验证码":</string>
  <string name="connection_type">请您注意查看你的手机短信接收验证码</string>
  <string name="client_account">充值时间:</string>
  <string name="client_type">充值中心</string>
  <string name="school_region">重要操作提示:</string>
  <string name="trouble_level">找回密码</string>
  <string name="trouble_way">帐号 :</string>
  <string name="trouble_solutiontime">最近登录时间 :</string>
  <string name="trouble_arrivetime">到达现场时间 :</string>
  <string name="trouble_appendtime">故障发生时间 :</string>
  <string name="trouble_backunit">忘记密码？</string>
  <string name="trouble_remark">请谨慎进行此次操作,在修改密码前请先确认你所操作是否安全</string>
  <string name="app_name1">系统消息设置</string>
  <string name="login1">登录</string>
  <string name="text_hint">Channel绑定信息：</string>
  <string name="text_btn_init">登陆百度账号初始化Channel</string>
  <string name="text_btn_init1">更换百度账号初始化Channel</string>
  <string name="text_btn_rich">查看富媒体消息</string>
  <string name="text_btn_initAK">无账号初始化Channel</string>
  <string name="text_btn_setTags">设置标签</string>
  <string name="text_btn_delTags">删除标签</string>
  <string name="text_btn_senior">高级功能</string>
  <string name="text_btn_set">设置</string>
  <string name="text_media_title">富媒体消息列表</string>
  <string name="media">Rich Media</string>
  <string name="custom_text_hint">用户自定义打开的Activity</string>
  <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>
  <string name="app_name2">安全支付</string>
  <string name="activity_remote_service_binding">AppDemo4</string>
  <string name="remote_call_failed">Failure calling remote service</string>
  <string name="partnerHint">"partner"</string>
  <string name="sellerHint">"seller"</string>
  <string name="out_trade_noHint">"out_trade_no"</string>
  <string name="subjectHint">"subject"</string>
  <string name="bodyHint">"body"</string>
  <string name="total_feeHint">"total_fee"</string>
  <string name="notify_urlHint">"notify_url"</string>
  <string name="charsetHint">"charset"</string>
  <string name="signTypeHint">"signType"</string>
  <string name="confirm_install_hint">"安装提示"</string>
  <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。\n\n点击确定，立即安装。"</string>
  <string name="Ensure">"确定"</string>
  <string name="Cancel">"取消"</string>
  <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
  <string name="tp_tab_play">玩吧</string>
  <string name="tp_tab_tour">游吧</string>
  <string name="tp_tab_index">首页</string>
  <string name="fp_tab_news">动态</string>
  <string name="fp_tab_lively">热评</string>
  <string name="fp_tab_share_near">附近分享</string>
  <string name="fp_tab_friends_news">好友动态</string>
  <string name="action_settings">Settings</string>
  <string name="hello_world">Hello world!</string>
  <string name="DW_string_0">支付金额:</string>
  <string name="DW_string_1">元</string>
  <string name="DW_string_2">如发现您的操作记录有异常，请立即与我们联系，YY玩建议您定期查询您的账号以保证您的账号安全.</string>
  <string name="DW_string_3">请输入您的手机号，并点击获取验证码：</string>
  <string name="DW_string_4">请输入您的手机号</string>
  <string name="DW_string_5">请输入验证码</string>
  <string name="DW_string_6">支付金额:</string>
  <string name="DW_string_7">元</string>
  <string name="DW_string_8">支持移动、联通、电信卡充值</string>
  <string name="DW_string_9">请输入卡号</string>
  <string name="DW_string_10">请输入您的密码</string>
  <string name="DW_string_11">所选卡值与实际面卡值不同时，卡内余额将冲入YY币</string>
  <string name="DW_string_12">支付金额:</string>
  <string name="DW_string_13">元</string>
  <string name="DW_string_14">支持移动、联通、电信卡充值</string>
  <string name="DW_string_15">请输入卡号</string>
  <string name="DW_string_16">请输入您的密码</string>
  <string name="DW_string_17">所选卡值与实际面卡值不同时，卡内余额将冲入YY币</string>
  <string name="DW_string_18">充值时间:</string>
  <string name="DW_string_19">订单号:</string>
  <string name="DW_string_20">充值状态:</string>
  <string name="DW_string_21">充值方式：</string>
  <string name="DW_string_22">充值金额：</string>
  <string name="DW_string_23">支付金额:</string>
  <string name="DW_string_24">元</string>
  <string name="DW_string_25">支持工、招、建、中等银行</string>
  <string name="DW_string_26">查看全部</string>
  <string name="DW_string_27">信用卡卡号</string>
  <string name="DW_string_28">信用卡关联手机号</string>
  <string name="DW_string_29">如：09/13,则输入0913</string>
  <string name="DW_string_30">卡校验码</string>
  <string name="DW_string_31">如发现您的操作记录有异常，请立即与我们联系，YY玩建议您定期查询您的账号以保证您的账号安全.</string>
  <string name="DW_string_32">账号：</string>
  <string name="DW_string_33">登录时间:</string>
  <string name="DW_string_34">获取更多</string>
  <string name="DW_string_35">读取中</string>
  <string name="DW_string_36">请输入您的用户名</string>
  <string name="DW_string_37">请输入您的密码</string>
  <string name="DW_string_38">找回密码</string>
  <string name="DW_string_39">修改密码</string>
  <string name="DW_string_40">请输入您的旧密码</string>
  <string name="DW_string_41">新密码为6~16个字符</string>
  <string name="DW_string_42">重新输入新密码</string>
  <string name="DW_string_43">确定</string>
  <string name="DW_string_44">全部</string>
  <string name="DW_string_45">成功</string>
  <string name="DW_string_46">未成功</string>
  <string name="DW_string_47">进度显示</string>
  <string name="DW_string_48">支付金额:</string>
  <string name="DW_string_49">元</string>
  <string name="DW_string_50">支持移动、联通、电信卡充值</string>
  <string name="DW_string_51">请输入卡号</string>
  <string name="DW_string_52">请输入您的密码</string>
  <string name="DW_string_53">所选卡值与实际面卡值不同时，卡内余额将冲入YY币</string>
  <string name="DW_string_54">请输入您的手机号，并点击获取验证码：</string>
  <string name="DW_string_55">请输入账号</string>
  <string name="DW_string_56">请输入绑定用手机号</string>
  <string name="DW_string_57">获取验证码</string>
  <string name="DW_string_58">请输入验证码</string>
  <string name="DW_string_59">下一步</string>
  <string name="DW_string_60">支付宝</string>
  <string name="DW_string_61">移动充值</string>
  <string name="DW_string_62">电信充值</string>
  <string name="DW_string_63">联通充值</string>
  <string name="DW_string_64">信用卡</string>
  <string name="DW_string_65">一卡通</string>
  <string name="DW_string_66">停发</string>
  <string name="DW_string_67">游戏攻略</string>
  <string name="DW_string_68">活动资讯</string>
  <string name="DW_string_69">游戏心得</string>
  <string name="DW_string_70">其他资料</string>
  <string name="DW_string_71">幻想三国</string>
  <string name="DW_string_72">类型：</string>
  <string name="DW_string_73">创意奇趣</string>
  <string name="DW_string_74">大小：</string>
  <string name="DW_string_75">请输入您的用户名</string>
  <string name="DW_string_76">请输入您的密码</string>
  <string name="DW_string_77">显示密码</string>
  <string name="DW_string_78">丫丫玩用户协议</string>
  <string name="DW_string_79">如发现您的操作记录有异常，请立即与我们联系，YY玩建议您定期查询您的账号以保证您的账号安全.</string>
  <string name="DW_string_80">找回密码成功</string>
  <string name="DW_string_81">请记住您的新密码:</string>
  <string name="DW_string_82">确定</string>
  <string name="DW_string_83">支付金额:</string>
  <string name="DW_string_84">元</string>
  <string name="DW_string_85">支持移动、联通、电信卡充值</string>
  <string name="DW_string_86">请输入卡号</string>
  <string name="DW_string_87">请输入您的密码</string>
  <string name="DW_string_88">所选卡值与实际面卡值不同时，卡内余额将冲入YY币</string>
  <string name="DW1_string_0">全部</string>
  <string name="DW1_string_1">成功</string>
  <string name="DW1_string_2">未成功</string>
  <string name="DW1_string_3">进度显示</string>
  <string name="DW1_string_4">支付金额:</string>
  <string name="DW1_string_5">元</string>
  <string name="DW1_string_6">支持骏网一卡通</string>
  <string name="DW1_string_7">请输入卡号</string>
  <string name="DW1_string_8">请输入您的密码</string>
  <string name="DW1_string_9">所选卡值与实际面卡值不同时，卡内余额将冲入YY币</string>
  <string name="DW1_string_10">请输入您的手机号，并点击获取验证码：</string>
  <string name="DW1_string_11">请输入账号</string>
  <string name="DW1_string_12">请输入绑定用手机号</string>
  <string name="DW1_string_13">获取验证码</string>
  <string name="DW1_string_14">请输入验证码</string>
  <string name="DW1_string_15">下一步</string>
  <string name="DW1_string_16">支付宝</string>
  <string name="DW1_string_17">移动充值</string>
  <string name="DW1_string_18">电信充值</string>
  <string name="DW1_string_19">联通充值</string>
  <string name="DW1_string_20">信用卡</string>
  <string name="DW1_string_21">一卡通</string>
  <string name="DW1_string_22">停发</string>
  <string name="DW1_string_23">游戏攻略</string>
  <string name="DW1_string_24">活动资讯</string>
  <string name="DW1_string_25">游戏心得</string>
  <string name="DW1_string_26">其他资料</string>
  <string name="DW1_string_27">幻想三国</string>
  <string name="DW1_string_28">类型：</string>
  <string name="DW1_string_29">创意奇趣</string>
  <string name="DW1_string_30">大小：</string>
  <string name="DW1_string_31">请输入您的用户名</string>
  <string name="DW1_string_32">请输入您的密码</string>
  <string name="DW1_string_33">显示密码</string>
  <string name="DW1_string_34">丫丫玩用户协议</string>
  <string name="DW1_string_35">如发现您的操作记录有异常，请立即与我们联系，YY玩建议您定期查询您的账号以保证您的账号安全.</string>
  <string name="DW1_string_36">找回密码成功</string>
  <string name="DW1_string_37">请记住您的新密码:</string>
  <string name="DW1_string_38">确定</string>
  <string name="DW1_string_39">支付金额:</string>
  <string name="DW1_string_40">元</string>
  <string name="DW1_string_41">支持全国联通充值</string>
  <string name="DW1_string_42">请输入卡号</string>
</resources>