<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout android:id="@+id/bingdinglayout" android:layout_width="324dp" android:layout_height="200dp" android:layout_centerInParent="true" android:background="@drawable/backgroundmiddle">
    <RelativeLayout android:id="@+id/headlayout" android:layout_width="fill_parent" android:layout_height="30dp" android:orientation="horizontal">
      <ImageView android:id="@+id/back" android:layout_width="28dp" android:layout_height="28dp" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:src="@drawable/back"/>
      <TextView android:id="@+id/login1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DW_string_39" android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView android:id="@+id/introbind" android:layout_width="235dp" android:layout_height="wrap_content" android:text="@string/trouble_remark" android:layout_below="@+id/headlayout" android:layout_centerHorizontal="true" android:textSize="13sp" android:layout_marginTop="5dp" android:textColor="@color/black"/>
    <EditText android:id="@+id/oldpwd" android:layout_below="@+id/introbind" android:layout_width="235dp" android:layout_height="wrap_content" android:hint="@string/DW_string_40" android:textSize="13sp" android:layout_marginTop="5dp" android:layout_centerHorizontal="true" android:background="@drawable/editbg">
      <requestFocus/>
    </EditText>
    <EditText android:id="@+id/newpwd" android:layout_below="@+id/oldpwd" android:layout_width="235dp" android:layout_height="wrap_content" android:hint="@string/DW_string_41" android:textSize="13sp" android:layout_marginTop="5dp" android:layout_centerHorizontal="true" android:background="@drawable/editbg"/>
    <EditText android:id="@+id/renewpwd" android:layout_below="@+id/newpwd" android:layout_width="235dp" android:layout_height="wrap_content" android:hint="@string/DW_string_42" android:textSize="13sp" android:layout_marginTop="5dp" android:layout_centerHorizontal="true" android:background="@drawable/editbg"/>
    <Button android:id="@+id/nowbind" android:layout_below="@+id/renewpwd" android:layout_width="235dp" android:layout_height="28dp" android:layout_marginTop="5dp" android:text="@string/DW_string_43" android:textSize="13sp" android:layout_centerHorizontal="true" android:background="@drawable/selectbar"/>
  </RelativeLayout>
</RelativeLayout>