<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
    <LinearLayout android:id="@+id/unicomlayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp" android:orientation="horizontal">
      <TextView android:id="@+id/sumtextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DW_string_48" android:textSize="14sp"/>
      <TextView android:id="@+id/sumet" android:layout_width="120dp" android:layout_height="wrap_content"/>
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DW_string_49" android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/creditdellayout" android:layout_below="@+id/unicomlayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:layout_marginTop="10dp" android:orientation="vertical">
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DW_string_50" android:textSize="14sp"/>
      <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <ImageView android:id="@+id/valcash" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/payvalue"/>
        <Spinner android:id="@+id/loginspinner" android:layout_width="240dp" android:layout_gravity="center_horizontal" android:layout_height="wrap_content"/>
      </LinearLayout>
      <EditText android:id="@+id/cardnum" android:layout_marginTop="10dp" android:layout_width="280dp" android:layout_height="wrap_content" android:background="@drawable/editbg" android:drawableLeft="@drawable/cardnum" android:hint="@string/DW_string_51" android:maxLength="25" android:singleLine="true" android:textSize="14sp"/>
      <EditText android:id="@+id/password" android:layout_marginTop="10dp" android:layout_width="280dp" android:layout_height="wrap_content" android:background="@drawable/editbg" android:drawableLeft="@drawable/cardpasswd" android:hint="@string/DW_string_52" android:maxLength="25" android:singleLine="true" android:textSize="14sp"/>
      <TextView android:id="@+id/introtv" android:layout_marginTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12sp" android:text="@string/DW_string_53"/>
    </LinearLayout>
    <Button android:id="@+id/paynow" android:layout_marginTop="20dp" android:layout_below="@+id/creditdellayout" android:layout_width="280dp" android:layout_height="28dp" android:background="@drawable/btn_pay"/>
  </RelativeLayout>
</RelativeLayout>