<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
  <RelativeLayout android:id="@+id/headlayout" android:layout_width="fill_parent" android:layout_height="60dp" android:background="@drawable/head" android:orientation="horizontal">
    <ImageView android:id="@+id/back" android:layout_width="36dp" android:layout_height="36dp" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:src="@drawable/back"/>
    <ImageView android:id="@+id/login1" android:layout_width="76dp" android:layout_height="31dp" android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:src="@drawable/yypay"/>
    <ImageView android:id="@+id/dropdown" android:layout_width="36dp" android:layout_height="36dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:src="@drawable/dropdown"/>
  </RelativeLayout>
  <HorizontalScrollView android:id="@+id/horiScroll" android:layout_width="wrap_content" android:layout_height="fill_parent" android:fadingEdge="none" android:layout_below="@+id/headlayout" android:background="@drawable/contentbg" android:scrollbars="none">
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:orientation="vertical">
      <ImageView android:id="@+id/movebar" android:layout_width="95dp" android:layout_height="40dp" android:background="@drawable/movebar"/>
      <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:orientation="vertical" android:layout_gravity="center_horizontal" android:gravity="center">
        <TextView android:id="@+id/txtZhiFu" android:layout_width="95dp" android:layout_height="40dp" android:gravity="center" android:textColor="@color/orange" android:textSize="13sp" android:text="@string/DW_string_60"/>
        <TextView android:id="@+id/txtYiDong" android:layout_width="95dp" android:layout_height="40dp" android:gravity="center" android:textSize="13sp" android:textColor="@color/orange" android:text="@string/DW_string_61"/>
        <TextView android:id="@+id/txtDianXin" android:layout_width="95dp" android:layout_height="40dp" android:gravity="center" android:textSize="13sp" android:textColor="@color/orange" android:text="@string/DW_string_62"/>
        <TextView android:id="@+id/txtLianTong" android:layout_width="95dp" android:layout_height="40dp" android:gravity="center" android:textSize="13sp" android:textColor="@color/orange" android:text="@string/DW_string_63"/>
        <TextView android:id="@+id/txtXinYong" android:layout_width="95dp" android:layout_height="40dp" android:textSize="13sp" android:textColor="@color/orange" android:gravity="center" android:text="@string/DW_string_64"/>
        <TextView android:id="@+id/txtQiTa" android:layout_width="95dp" android:layout_height="40dp" android:textSize="13sp" android:textColor="@color/orange" android:gravity="center" android:text="@string/DW_string_65"/>
      </LinearLayout>
    </FrameLayout>
  </HorizontalScrollView>
  <android.support.v4.view.ViewPager android:id="@+id/vPager_Sc" android:layout_toRightOf="@+id/horiScroll" android:layout_below="@+id/headlayout" android:layout_marginLeft="30dp" android:layout_marginRight="30dp" android:layout_width="match_parent" android:layout_height="match_parent"/>
</RelativeLayout>