<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout android:id="@+id/bingdinglayout" android:layout_width="324dp" android:layout_height="195dp" android:layout_centerInParent="true" android:background="@drawable/backgroundmiddle">
    <RelativeLayout android:id="@+id/headlayout" android:layout_width="fill_parent" android:layout_height="30dp" android:orientation="horizontal">
      <ImageView android:id="@+id/back" android:layout_width="28dp" android:layout_height="28dp" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:src="@drawable/back"/>
      <ImageView android:id="@+id/login1" android:layout_width="66dp" android:layout_height="21dp" android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:src="@drawable/yyregister"/>
    </RelativeLayout>
    <EditText android:id="@+id/username" android:layout_below="@+id/headlayout" android:layout_marginTop="15dp" android:layout_width="235dp" android:layout_height="wrap_content" android:background="@drawable/editbg" android:drawableLeft="@drawable/usernamebg" android:layout_centerHorizontal="true" android:hint="@string/DW_string_75" android:maxLength="15" android:singleLine="true" android:textSize="14sp"/>
    <EditText android:id="@+id/userpassword" android:layout_below="@+id/username" android:layout_width="235dp" android:layout_centerHorizontal="true" android:layout_marginTop="10dp" android:layout_height="wrap_content" android:background="@drawable/editbg" android:drawableLeft="@drawable/lock" android:hint="@string/DW_string_76" android:maxLength="15" android:singleLine="true" android:textSize="14sp"/>
    <LinearLayout android:layout_width="fill_parent" android:layout_below="@+id/userpassword" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:id="@+id/linelayout" android:orientation="horizontal">
      <CheckBox android:id="@+id/dispasswd" android:layout_width="wrap_content" android:layout_height="28dp" android:layout_marginLeft="40dp" android:text="@string/DW_string_77" android:textColor="@color/dark" android:checked="true" android:textSize="13sp"/>
      <CheckBox android:id="@+id/yyprotocol" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginLeft="15dp"/>
      <TextView android:id="@+id/yypro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DW_string_78" android:textColor="@color/orange" android:textSize="13sp"/>
    </LinearLayout>
    <Button android:id="@+id/regnow" android:layout_below="@+id/linelayout" android:gravity="center" android:layout_centerHorizontal="true" android:layout_marginTop="10dp" android:layout_width="235dp" android:layout_height="28dp" android:background="@drawable/registernow"/>
  </RelativeLayout>
</RelativeLayout>